--- a/Code/jobjett/src/components/LandingPage/Left-Photo/left.css
+++ b/Code/jobjett/src/components/LandingPage/Left-Photo/left.css
@@ -1,8 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: 0;
-}
 .second-page {
   width: 100%;
   margin: auto;
@@ -29,20 +24,20 @@
   margin: 20px;
   position: relative;
   overflow: hidden;
-  border: 2px solid var(--color);
+  border: 2px solid var(--blue);
   transition: color 0.5s;
   z-index: 1;
   font-size: 17px;
   border-radius: 6px;
   font-weight: 500;
-  color: var(--color);
+  color: var(--blue);
   text-decoration: none;
 }
 .btn:before {
   content: "";
   position: absolute;
   z-index: -1;
-  background: var(--color);
+  background: var(--blue);
   height: 150px;
   width: 200px;
   border-radius: 50%;
