--- a/Code/jobjett/src/components/candidate/CandidateHomePage/CandidateHomePage.css
+++ b/Code/jobjett/src/components/candidate/CandidateHomePage/CandidateHomePage.css
@@ -7,7 +7,7 @@
 }
 .singleJob {
   position: relative;
-  width: 300px; /* Set the width */
+  width: 298px; /* Set the width */
   height: 375px;
   padding: 20px;
   background-color: white;
@@ -54,4 +54,9 @@
 }
 .jobButtons button {
   margin-bottom: 7px; /* Add margin between buttons */
+}
+.jobDescription {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
