--- a/Code/jobjett/src/components/LandingPage/FirstSection/First-Section.css
+++ b/Code/jobjett/src/components/LandingPage/FirstSection/First-Section.css
@@ -4,6 +4,7 @@ section {
   background-position: center;
   background-size: cover;
   position: relative;
+  /* margin-top: 80px; */
 }
 .text-box {
   width: 100%;
@@ -14,4 +15,5 @@ section {
   transform: translate(-50%, -50%);
   text-align: center;
   font-size: 20px;
+  padding: 40px;
 }
