--- a/Code/jobjett/src/components/LandingPage/Navbar/Navbar.css
+++ b/Code/jobjett/src/components/LandingPage/Navbar/Navbar.css
@@ -29,6 +29,7 @@ nav {
   color: black;
   text-decoration: none;
   font-size: 17.5px;
+  transition: border-bottom 2ms ease;
 }
 .nav-links li a:hover {
   font-size: 19px;
