--- a/Code/jobjett/src/components/candidate/CandidateHomePage/CandidateHomePage.css
+++ b/Code/jobjett/src/components/candidate/CandidateHomePage/CandidateHomePage.css
@@ -8,7 +8,7 @@
 
 .singleJob {
   position: relative;
-  width: 298px; /* Set the width */
+  width: 300px; /* Set the width */
   height: 375px;
   padding: 20px;
   background-color: white;
@@ -57,27 +57,15 @@
 .jobButtons button {
   margin-bottom: 7px; /* Add margin between buttons */
 }
-.jobDescription {
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-}
-#singleJob {
-  transition: background-color 0.5s ease;
-}
-#singleJob:hover {
+.singleJob:hover > * {
   color: white;
 }
-#singleJob:hover > * {
+.singleJob:hover h1 {
   color: white;
 }
-#singleJob:hover button {
+.singleJob:hover button {
   color: white;
 }
-#singleJob:hover h1 {
-  color: white;
-}
-#singleJob:hover button:hover {
-  background-color: white;
-  color: black;
+.singleJob:hover button:hover {
+  color: var(--blue);
 }
